--- a/Lab4/CountryApp/app/src/main/res/layout/activity_edit_details.xml
+++ b/Lab4/CountryApp/app/src/main/res/layout/activity_edit_details.xml
@@ -1,193 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
     android:background="#E3F2F9"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.csee5590.lab3.SignUpActivity">
+    tools:context="com.csee5590.lab3.SignUpActivity" >
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Major"
-        android:layout_alignTop="@+id/txt_major"
-        android:textSize="15sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_phone"
-        android:singleLine="true"
-        android:text="Phone"
-        android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailsHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Account Details"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:layout_marginTop="32dp"/>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_university"
-        android:singleLine="true"
-        android:text="University"
-        android:textSize="15sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_age"
-        android:text="Age"
-        android:textSize="15sp" />
+            <TextView
+                android:id="@+id/emailHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/txt_uname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lbl_Header"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Username/Email"
-        android:inputType="textEmailAddress"
-        android:textSize="25sp"
-        android:background="@drawable/textview"
-        android:enabled="false"/>
+            <EditText
+                android:id="@+id/txt_uname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
 
-    <TextView
-        android:id="@+id/lbl_Heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_uname"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:shadowColor="@color/colorPrimaryDark"
-        android:shadowRadius="5"
-        android:singleLine="false"
-        android:text="Personal Information"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp" />
+        </LinearLayout>
 
-    <EditText
-        android:id="@+id/txt_name"
-        android:layout_width="144dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lbl_Heading"
-        android:layout_marginLeft="90dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:hint="First/Last Name"
-        android:inputType="textPersonName"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/infoHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Personal Information"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/txt_age"
-        android:layout_width="141dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_name"
-        android:layout_marginLeft="90dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:hint="Age"
-        android:inputType="number"
-        android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/txt_phone"
-        android:layout_width="141dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_age"
-        android:layout_marginLeft="90dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:hint="Phone Number"
-        android:inputType="phone"
-        android:textSize="20sp" />
+            <TextView
+                android:id="@+id/nameHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/txt_university"
-        android:layout_width="wrap_content"
-        android:layout_height="31dp"
-        android:layout_below="@+id/txt_phone"
-        android:layout_marginLeft="110dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:hint="University/Organization"
-        android:inputType="textCapSentences"
-        android:textSize="15sp" />
+            <EditText
+                android:id="@+id/txt_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
 
-    <EditText
-        android:id="@+id/txt_major"
-        android:layout_width="141dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_university"
-        android:layout_marginLeft="90dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:hint="Major"
-        android:inputType="textCapSentences"
-        android:textSize="20sp" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_apply"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="11dp"
-        android:background="@drawable/new_button2"
-        android:text="Apply Change" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
 
-    <TextView
-        android:id="@+id/lbl_Header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:shadowColor="@color/colorPrimaryDark"
-        android:shadowRadius="5"
-        android:singleLine="false"
-        android:text="Account Details"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/colorPrimary"
-        android:textSize="40sp" />
+            <TextView
+                android:id="@+id/ageHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Age:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/lbl_Error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_signup"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
-        android:singleLine="false"
-        android:text="Invalid Username/Password!"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#e12c2c"
-        android:textSize="15sp"
-        android:visibility="invisible" />
+            <EditText
+                android:id="@+id/txt_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_name"
-        android:text="Name"
-        android:textSize="15sp" />
+        </LinearLayout>
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/phoneHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phone:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txt_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/univHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="University:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txt_university"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/majorHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Major:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txt_major"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textEmailAddress" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/lbl_Error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_above="@+id/btn_signup"
+            android:layout_centerHorizontal="true"
+            android:singleLine="false"
+            android:text="Invalid Username/Password!"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#e12c2c"
+            android:textSize="15sp"
+            android:visibility="invisible"
+            android:layout_marginTop="16dp"/>
+
+                <Button
+                    android:id="@+id/btn_apply"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="Apply Changes"
+                    android:textColor="@color/colorAccent"
+                    android:layout_marginTop="16dp"/>
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
